--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,9 +6,19 @@
     android:layout_height="match_parent"
     tools:context="com.development.honza.jasichinese.SearchActivity">
 
+    <TextView
+        android:id="@+id/tv_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tv_input"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="472dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_search">
 
         <EditText
             android:id="@+id/editText_search"
@@ -16,11 +26,12 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:gravity="left"
+            android:hint="@string/tv_input"
             android:inputType="textPersonName" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="453dp"
+            android:layout_height="428dp"
             android:layout_gravity="bottom|center_horizontal"
             android:layout_marginTop="15dp"
             android:orientation="vertical"
