--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,24 +13,17 @@
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="showSettings"
-        android:text="Button" />
-
     <LinearLayout
         android:id="@+id/fullscreen_content_controls"
         style="?metaButtonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|center_horizontal"
         android:background="@color/black_overlay"
         android:orientation="vertical"
-        tools:ignore="UselessParent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        tools:ignore="UselessParent">
 
         <LinearLayout
             android:id="@+id/layout_main_v1"
@@ -37,44 +31,6 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="vertical">
-
-            <LinearLayout
-                android:id="@+id/layout_main_v_h_1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/search_button"
-                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="1dp"
-                    android:layout_weight="1"
-                    android:background="@color/black_overlay"
-                    android:onClick="searchActivity"
-                    android:text="@string/search_button"
-                    android:textColor="@android:color/darker_gray"
-                    tools:text="@string/search_button" />
-
-                <Button
-                    android:id="@+id/sync_button"
-                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginLeft="1dp"
-                    android:layout_marginRight="4dp"
-                    android:layout_weight="1"
-                    android:background="@color/black_overlay"
-                    android:onClick="syncWords"
-                    android:text="@string/sync_button"
-                    android:textColor="@android:color/darker_gray"
-                    tools:text="@string/sync_button" />
-            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/layout_main_v_h_2"
@@ -88,11 +44,11 @@
                     style="@style/Widget.AppCompat.Button.Borderless.Colored"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="4dp"
                     android:layout_marginStart="2dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginRight="4dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_weight="1"
                     android:background="@color/black_overlay"
                     android:onClick="showWordsCategory"
@@ -114,11 +70,11 @@
                     style="@style/Widget.AppCompat.Button.Borderless.Colored"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="1dp"
                     android:layout_marginStart="2dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginRight="1dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_weight="1"
                     android:background="@color/black_overlay"
                     android:elevation="0dp"
@@ -131,9 +87,9 @@
                     android:id="@+id/spinner_flashcards"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginLeft="1dp"
                     android:layout_marginRight="4dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_weight="1"
                     android:background="@android:color/darker_gray"
                     android:hapticFeedbackEnabled="true"
@@ -145,9 +101,9 @@
                 android:id="@+id/spinner_poradi"
                 android:layout_width="match_parent"
                 android:layout_height="51dp"
-                android:layout_marginBottom="5dp"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
+                android:layout_marginBottom="5dp"
                 android:layout_weight="0"
                 android:background="@android:color/holo_orange_dark"
                 android:scrollbarSize="30dp"
