--- a/app/src/main/res/layout/actitvity_swipe.xml
+++ b/app/src/main/res/layout/actitvity_swipe.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="429dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="0dp"
+        android:layout_weight="8">
 
         <android.support.v4.view.PagerTabStrip
             android:id="@+id/pager_tab_strip_swipe"
@@ -23,28 +24,29 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="52dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/editText_set_position"
-            android:layout_width="97dp"
+            android:id="@+id/et_swipe_position"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="4"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
+            android:importantForAutofill="no"
             android:inputType="number"
-            android:text="0"
-            android:importantForAutofill="no" />
+            android:text="0" />
 
         <Button
-            android:id="@+id/button_select_position"
-            android:layout_width="wrap_content"
+            android:id="@+id/btn_swipe_position"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:elevation="1dp"
             android:onClick="SwipeSetPosition"
             android:text="@string/button_select_position" />
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
