--- a/app/src/main/res/layout/activity_show_word.xml
+++ b/app/src/main/res/layout/activity_show_word.xml
@@ -16,131 +16,159 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_height="0dp"
+            android:layout_weight="8"
+            android:elevation="0dp"
+            android:isScrollContainer="true"
+            android:orientation="vertical"
+            android:scrollbars="vertical"
+            android:verticalScrollbarPosition="right">
 
-            <ScrollView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:elevation="0dp"
-                    android:isScrollContainer="true"
-                    android:orientation="vertical"
-                    android:scrollbars="vertical"
-                    android:verticalScrollbarPosition="right">
+                <TextView
+                    android:id="@+id/tv_show_myForeign"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/textView_show_chinese"
+                    android:textSize="24sp" />
 
-                    <TextView
-                        android:id="@+id/textView_show_Chinese"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/textView_show_chinese"
-                        android:textSize="24sp" />
+                <EditText
+                    android:id="@+id/et_show_myForeign"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:ems="10"
+                    android:textSize="18sp" />
+            </LinearLayout>
 
-                    <EditText
-                        android:id="@+id/editText_show_chinese"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:textSize="18sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/textView_show_pinyin"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="5dp"
-                        android:text="@string/textView_show_pinyin"
-                        android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/tv_show_myReading"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:paddingTop="5dp"
+                    android:text="@string/textView_show_pinyin"
+                    android:textSize="24sp" />
 
-                    <EditText
-                        android:id="@+id/editText_show_pinyin"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:textSize="18sp" />
+                <EditText
+                    android:id="@+id/et_show_myReading"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:ems="10"
+                    android:textSize="18sp" />
+            </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/textView_show_czech"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="5dp"
-                        android:text="@string/textView_show_czech"
-                        android:textSize="24sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                    <EditText
-                        android:id="@+id/editText_show_czech"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/tv_show_myLang"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:paddingTop="5dp"
+                    android:text="@string/textView_show_czech"
+                    android:textSize="24sp" />
 
-                    <TextView
-                        android:id="@+id/textView_show_category"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:elevation="1dp"
-                        android:paddingTop="5dp"
-                        android:text="@string/textView_show_category"
-                        android:textSize="24sp" />
+                <EditText
+                    android:id="@+id/et_show_myLang"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:ems="10"
+                    android:textSize="18sp" />
+            </LinearLayout>
 
-                    <EditText
-                        android:id="@+id/editText_show_category"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:textSize="18sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/textView_show_id"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/textView_show_id"
-                        android:textSize="8sp"
-                        android:visibility="invisible" />
+                <TextView
+                    android:id="@+id/tv_show_category"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:elevation="1dp"
+                    android:paddingTop="5dp"
+                    android:text="@string/textView_show_category"
+                    android:textSize="24sp" />
 
-                    <EditText
-                        android:id="@+id/editText_show_id"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:ems="10"
-                        android:textAlignment="textEnd"
-                        android:textSize="10sp"
-                        android:visibility="invisible" />
+                <EditText
+                    android:id="@+id/et_show_category"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:ems="10"
+                    android:textSize="18sp" />
+            </LinearLayout>
 
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/tv_show_id"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0"
+                android:text="@string/textView_show_id"
+                android:textSize="8sp"
+                android:visibility="invisible" />
 
-                        <ImageButton
-                            android:id="@+id/imageButton_detail_play"
-                            android:layout_width="85dp"
-                            android:layout_height="85dp"
-                            android:layout_gravity="center_vertical|end"
-                            android:background="@android:color/holo_orange_light"
-                            android:theme="@android:style/MediaButton.Play" />
-
-                    </FrameLayout>
-
-                </LinearLayout>
-            </ScrollView>
+            <EditText
+                android:id="@+id/et_show_id"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="end"
+                android:layout_weight="0"
+                android:ems="10"
+                android:textAlignment="textEnd"
+                android:textSize="10sp"
+                android:visibility="invisible" />
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/button_save"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="108dp"
-            android:layout_alignParentBottom="false"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:onClick="saveWord"
-            android:text="@string/button_save"
-            android:textSize="18sp" />
+            android:layout_height="0dp"
+            android:layout_weight="2">
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_detail_play"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_gravity="center_vertical|end"
+                android:layout_marginRight="16dp"
+                android:background="@android:color/holo_orange_light"
+                android:src="@android:drawable/ic_media_play"
+                android:theme="@android:style/MediaButton.Play"
+                app:backgroundTint="@android:color/holo_orange_light"
+                app:fabSize="normal" />
+
+            <Button
+                android:id="@+id/fab_detail_save"
+                android:layout_width="wrap_content"
+                android:layout_height="56dp"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:background="@color/colorPrimaryDark"
+                android:clickable="true"
+                android:onClick="saveWord"
+                android:src="?attr/actionModeSelectAllDrawable"
+                android:text="@string/button_save"
+                android:textColor="@android:color/background_light"
+                android:textSize="18sp"
+                app:fabSize="normal" />
+        </FrameLayout>
 
     </LinearLayout>
 
