--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -6,38 +6,32 @@
     android:id="@+id/linearLayout_words">
 
     <TextView
-        android:text="TextView"
+        android:id="@+id/tv_hiddenId"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_hiddenId"
-        android:layout_weight="1"
+        android:layout_weight="0"
         android:visibility="gone" />
 
     <TextView
-        android:id="@+id/tv_inCzech"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_myLang"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:paddingRight="3dp"
-        android:text="First"
-        android:textSize="24sp"></TextView>
+        android:layout_weight="3"
+        android:textSize="18sp"></TextView>
 
     <TextView
-        android:id="@+id/tv_inPinyin"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_myReading"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Second"
-        android:textSize="24sp"></TextView>
+        android:layout_weight="3"
+        android:textSize="18sp"></TextView>
 
     <TextView
-        android:id="@+id/tv_inChinese"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_myForeign"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:fontFamily="serif"
-        android:paddingLeft="3dp"
-        android:text="Third"
-        android:textSize="24sp"></TextView>
+        android:textSize="18sp"></TextView>
 
 </LinearLayout>
