--- a/app/src/main/res/layout-v16/fragment_page_layout.xml
+++ b/app/src/main/res/layout-v16/fragment_page_layout.xml
@@ -10,55 +10,52 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="143dp"
-        android:layout_weight="0.5">
+        android:layout_weight="2">
 
         <TextView
             android:id="@+id/tv_fragmentDetailShow"
             android:layout_width="match_parent"
-            android:layout_height="252dp"
+            android:layout_height="match_parent"
             android:fontFamily="serif"
             android:gravity="fill_vertical|fill_horizontal"
-            android:text="TextView"
             android:textAlignment="center"
             android:textSize="36sp"
             android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/ib_fragment_play"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_gravity="bottom|end"
             android:background="@android:color/holo_orange_light"
-            android:contentDescription="@string/button_play_description"
-            android:src="@android:drawable/ic_media_play" />
+            android:src="@android:drawable/ic_media_play"
+            android:theme="@android:style/MediaButton.Play" />
     </FrameLayout>
 
     <TextView
         android:id="@+id/tv_fragmentDetailReading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.25"
+        android:layout_weight="1"
         android:background="@android:color/darker_gray"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center_vertical|center_horizontal"
-        android:text="TextView"
         android:textAlignment="center"
         android:textColor="@android:color/transparent"
         android:textSize="24sp" />
 
     <TextView
-        android:text="TextView"
+        android:id="@+id/tv_fragmentDetailMyLanguage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_fragmentDetailMyLanguage"
-        android:layout_weight="0.25"
-        android:textAlignment="center"
-        android:gravity="center_vertical|center_horizontal"
+        android:layout_weight="1"
         android:background="#8aa2a2a2"
         android:clickable="true"
-        android:textSize="24sp"
+        android:focusable="true"
+        android:gravity="center_vertical|center_horizontal"
+        android:textAlignment="center"
         android:textColor="@android:color/transparent"
-        android:focusable="true" />
+        android:textSize="24sp" />
 
 </LinearLayout>
