--- a/app/src/main/res/layout/activity_words_list.xml
+++ b/app/src/main/res/layout/activity_words_list.xml
@@ -13,7 +13,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
@@ -26,15 +26,16 @@
             <ImageView
                 android:id="@+id/iv_search"
                 android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="top|start"
+                android:layout_height="match_parent"
+                android:layout_gravity="top|center_vertical|start"
                 android:contentDescription="@string/action_search"
                 android:src="@android:drawable/ic_search_category_default" />
 
             <EditText
                 android:id="@+id/et_search"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="4"
                 android:autofillHints=""
                 android:ems="10"
@@ -44,15 +45,16 @@
             <TextView
                 android:id="@+id/tv_list_category"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="2"
-                android:gravity="end"
+                android:gravity="center_vertical|end"
                 android:text="@string/textView_show_category" />
 
             <Switch
                 android:id="@+id/switch_category"
                 android:layout_width="55dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textOff="@string/switch_text_off"
                 android:textOn="@string/switch_text_on"
                 android:textSize="12sp" />
