--- a/app/src/main/res/layout/activity_words_list.xml
+++ b/app/src/main/res/layout/activity_words_list.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_words_list"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,93 +13,90 @@
     tools:context="com.development.honza.jasichinese.WordsListActivity">
 
     <LinearLayout
+        android:id="@+id/linearLayout_search"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:minHeight="50dp"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/linearLayout_search"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+        <ImageView
+            android:id="@+id/iv_search"
+            android:layout_width="25dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="top|center_vertical|start"
+            android:contentDescription="@string/action_search"
+            android:src="@android:drawable/ic_search_category_default" />
+
+        <EditText
+            android:id="@+id/et_search"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="7"
+            android:autofillHints=""
+            android:hint="@string/action_search"
+            android:inputType="text" />
+
+        <TextView
+            android:id="@+id/tv_list_category"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:gravity="center_vertical|end"
+            android:text="@string/textView_show_category"
+            android:textSize="11sp" />
 
-            <ImageView
-                android:id="@+id/iv_search"
-                android:layout_width="40dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="top|center_vertical|start"
-                android:contentDescription="@string/action_search"
-                android:src="@android:drawable/ic_search_category_default" />
-
-            <EditText
-                android:id="@+id/et_search"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="4"
-                android:autofillHints=""
-                android:ems="10"
-                android:hint="@string/action_search"
-                android:inputType="textPersonName" />
-
-            <TextView
-                android:id="@+id/tv_list_category"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="2"
-                android:gravity="center_vertical|end"
-                android:text="@string/textView_show_category" />
-
-            <Switch
-                android:id="@+id/switch_category"
-                android:layout_width="55dp"
-                android:layout_height="match_parent"
-                android:textOff="@string/switch_text_off"
-                android:textOn="@string/switch_text_on"
-                android:textSize="12sp" />
-
-        </LinearLayout>
-
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/ll_list"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="8"
-            android:paddingTop="10dp">
-
-            <ListView
-                android:id="@+id/lv_words"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:clickable="true"
-                android:drawSelectorOnTop="false"
-                android:focusable="true"
-                android:longClickable="true"
-                app:layout_constraintTop_toTopOf="parent">
-
-
-            </ListView>
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/fab_add"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginBottom="16dp"
-                android:clickable="true"
-                android:focusable="true"
-                android:hapticFeedbackEnabled="true"
-                android:onClick="addWord"
-                android:src="@android:drawable/ic_input_add"
-                app:backgroundTint="@android:color/holo_orange_dark"
-                app:fabSize="normal"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-        </android.support.constraint.ConstraintLayout>
+        <Switch
+            android:id="@+id/switch_category"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textOff="@string/switch_text_off"
+            android:textOn="@string/switch_text_on"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
-</FrameLayout>
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/ll_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="8"
+        android:paddingTop="10dp">
+
+        <ListView
+            android:id="@+id/lv_words"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:clickable="true"
+            android:drawSelectorOnTop="false"
+            android:focusable="true"
+            android:longClickable="true"
+            android:minHeight="100dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+
+        </ListView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_add"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:hapticFeedbackEnabled="true"
+            android:onClick="addWord"
+            android:src="@android:drawable/ic_input_add"
+            app:backgroundTint="@android:color/holo_orange_dark"
+            app:fabSize="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
